<resources>
    <string name="app_name">WonderBook</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="cap">ZipCode</string>
    <string name="city">City</string>
    <string name="street">Street/Square</string>
    <string name="mail">E-Mail</string>
    <string name="description">Description</string>
    <string name="phone">Phone Number</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="uploadImage">Upload Image...</string>
    <string name="description_value">Hello world!</string>
    <string name="alert_button">OK</string>
    <string name="alert_title">Attention</string>
    <string name="personal_information">Informations</string>
    <string name="done">Done</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_description">Enter information that will be made public or private</string>
    <string name="permission_ext_storage_denied">Permission denied to read your external storage</string>
    <string name="error_upload_image">Error while uploading a new image</string>
    <string name="field_pl">"The fields: "</string>
    <string name="allert_end_pl">must be setted.</string>
    <string name="field_sin">The field:</string>
    <string name="allert_end_sin">must be setted</string>
    <string name="correctly">correctly</string>
    <string name="description_description">Add a brief description of yourself here</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="information">Information</string>
    <string name="bar_code_fill">Fill in with barcode scan</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="year">Year</string>
    <string name="publisher">Publisher</string>
    <string name="condition">Condition</string>
    <string name="condition_description">Describe the condition of your book here</string>
    <string name="title_activity_start">Start</string>
    <string name="slogan">Share your library, find a world of books</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="add_book">Add Book</string>
    <string name="register">Sign in</string>
    <string name="login">Login</string>
    <string name="confirm">confirm password</string>
    <string name="subtitle">Subtitle (if present)</string>
    <string name="title_activity_login">Login</string>
    <string name="updating">Updating...</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_auth_failed">Authentication failed.</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions</string>
    <string name="loginDescription">Insert your email and password</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_test">Test</string>
    <string name="email_verif_toast1">An email has been sent to </string>
    <string name="email_verif_toast2">, click on the link to verify your account.</string>
    <string name="email_not_verif">Please, verify your email address.</string>
    <string name="resend_email">Resend verification email</string>
    <string name="home">Home</string>
    <string name="show_profile">Profile</string>
    <string name="show_book">Library</string>
    <string name="logout">Logout</string>
    <string name="changeMail">You are changing your email.Please remember to verify your e-mail</string>
    <string name="registerMessage">Email not avaiable!</string>
    <string name="edit">Edit</string>
    <string name="title_activity_edit_credential">EditCredential</string>
    <string name="password">Password</string>
    <string name="no_book_shared_title">No books have yet been shared</string>
    <string name="no_book_shared_subtitle">Start sharing now</string>
    <string name="shared_by">Shared by</string>
    <string name="publisher_point">Publisher:</string>
    <string name="state_point">State:</string>
    <string name="state">State</string>
    <string name="state_description">Indicate here if your book is available or not</string>
    <string name="available">available</string>
    <string name="unavailable">unavailable</string>
    <string name="available_upper">Available</string>
    <string name="unavailable_upper">Unavailable</string>
    <string name="available_by_point">Available from:</string>
    <string name="show_my_shared_book">Show my shared books</string>
    <string name="fill_all_fields">Attention: all fields must be fill in</string>
    <string name="fill_not_possible">Attention: it wasn\'t possible to pre-fill all the fields</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_to_delete_book">Attention: are you sure to delete this book?</string>
    <string name="isbn">ISBN</string>
    <string name="wait">Please wait...</string>
    <string name="error_reload_new_book">Attention: there was a problem while loading the new settings</string>
    <string name="wrong_isbn">Attention: ISBN must be 13 or 10 characters</string>
    <string name="editpwd">Please insert current password</string>
    <string name="mail_not_valid">This email address is invalid</string>
    <string name="resend_mail">"A new verification email has been sent to "</string>
    <string name="login_psw_error">Passwords mismatch</string>
    <string name="confirm_mail_msg">It has been sent a confirmation mail. Please verify it and then make login.</string>
    <string name="tap_here_to_resend">Tap here to send again</string>
    <string name="email_private">Set as public/private</string>
    <string name="update_pwd">Password update complete!</string>
    <string name="update_pwd_fail">Password update failed!</string>
    <string name="no_change">This is already your email!</string>
    <string name="weak_pwd">The password is too short</string>
    <string name="account_setting">account settings</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="password_change_to">"Password change to "</string>
    <string name="password_not_changed">The password has not been changed</string>
    <string name="auth_fail_internet">Authentication failed. Please check your internet connection.</string>
    <string name="please_verify_email">Please verify your email address.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="insert_new_email">Insert new email</string>
    <string name="insert_new_password">Insert new password</string>
    <string name="email_settings">Email Settings</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_edit_pwd">EditPwd</string>
    <string name="use_new_pwd">Please choose a new password</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_title">Title</string>
    <string name="tab_author">Author</string>
    <string name="tab_all">Any</string>
    <string name="show_chat">Messages</string>
    <string name="order">ORDER</string>
    <string name="tab_rating">Rating</string>
    <string name="position">Position</string>
    <string name="position_description">Let others know where is the book</string>
    <string name="user">User</string>
    <string name="no_results">The search did not return any results</string>
    <string name="latest_releases_near_you">The latest releases near you</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="latest_releases">The latest releases</string>
    <string name="own_pos_not_found">Warning: it was not possible to find your position</string>
    <string name="closest_to_you">The closest to you</string>
    <string name="most_rating">The most rating</string>
    <string name="km_from_you">Km from you</string>
    <string name="in_your_city">In your city</string>
    <string name="enable_position_performances">Please turn on GPS to exploit the best experience</string>
    <string name="title_activity_chat">Chat</string>
    <string name="change_credential">Change your access credentials</string>
    <string name="last_seen">Last seen:</string>
    <string name="of">of</string>
    <string name="incoming_msg">Incoming Message</string>
    <string name="msg_notification">new messages</string>
    <string name="notification_channel_id">channel_chat</string>
    <string name="message_to_delete">message to delete</string>
    <string name="messages_to_delete">messages to delete</string>
    <string name="reset_mail">We have sent you an email to set a new password</string>
    <string name="insert_email">Please insert email</string>
    <string name="reset_mail_error">Impossible to reset the password</string>
    <string name="position_filter_description">Modify the search position</string>
    <string name="restore_psw">Did you forget your password?</string>
    <string name="current_position">Current position</string>
    <string name="position_filter_radius">Specify a search radius</string>
    <string name="radius">Km radius</string>
    <string name="valid_radius">Attention: insert a valid radius</string>
    <string name="change_mail_pass">Change email and password</string>
    <string name="filter">FILTER</string>
    <string name="there_are_no_chats">There are no chats</string>
    <string name="edit_profile">Edit Your Profile</string>
    <string name="show_book_full">Book Information</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="write_new_review">Write review</string>
    <string name="describe_exp_with">Describe your expirience with</string>
    <string name="i_lend_book">I lended a book</string>
    <string name="i_borrow_book">I borrowed a book</string>
    <string name="message_request_book">Hello *user_name*! I\'m interested in your book *book_name*. Do you wanna share it with me? 😀</string>
    <string name="loans">Loans</string>
    <string name="pending_request">Loan Requests</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="DeleteRequest">Cancel request</string>
    <string name="send">Send</string>
    <string name="show_movment">Yours Shares</string>
    <string name="request">Requests</string>
    <string name="your_request_description">Request to *req_name* on *req_date*</string>
    <string name="other_request_description">Request by *req_name* on *req_date*</string>
    <string name="conclude_the_loan">Conclude the loan</string>
    <string name="wait_other_user_finish">Wait for the user to complete the loan</string>
    <string name="borrowed_by_descr">Borrowed by *name* on *date*</string>
    <string name="lended_by_descr">Lent to *name* on date *date*</string>
    <string name="borrowed_by">Borrowed by</string>
    <string name="lended_by">Lent by</string>
    <string name="from">From</string>
    <string name="borrowed">borrowed</string>
    <string name="concluded_loans">concluded loans</string>
    <string name="lended">lent</string>
    <string name="use_your_current_position">Set your current position</string>
</resources>