<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:iconTint="@color/colorAccent"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:iconTint="@color/colorAccent"
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/show_profile"/>

        <group
            android:id="@+id/grouped_book"
            android:checkableBehavior="single">

            <item
                android:title="@string/show_book"
                android:icon = "@drawable/ic_library_books_black_24dp"
                android:id="@+id/nav_show_shared_book"/>
            <item
                android:title="@string/loans"
                android:id="@+id/nav_loans"
                android:icon= "@drawable/ic_menu_share"
                app:actionViewClass="android.widget.TextView"/>
            <item
                android:title = "@string/pending_request"
                android:id = "@+id/pending_request"
                android:icon= "@drawable/ic_import_export_black_24dp"
                app:actionViewClass="android.widget.TextView"/>

        </group>
        <item

            android:iconTint="@color/colorAccent"
            android:id="@+id/nav_show_chat"
            android:icon="@drawable/ic_message_black_24dp"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/show_chat" />

        <item
            android:iconTint="@color/colorAccent"
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />


    </group>

</menu>
