<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_inside_box"
                    android:text="@string/position" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bottom_inside_box"
                    android:text="@string/position_filter_description"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/subtitle_box_size" />


                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_left"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_place_blue_24dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/changeCurrentPosition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/current_position"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:padding="5dp"
                            android:id="@+id/llCurrentPosition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/bottom_inside_box"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_near_me_blue_24dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/use_your_current_position"
                                android:textColor="@color/colorAccent"
                                android:textSize="@dimen/subtitle_box_size" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/bottom_inside_box"
                        android:text="@string/position_filter_radius"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/subtitle_box_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/bottom_inside_box"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/radius" />

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/changeRadius"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/bottom_inside_box"
                            android:layout_marginLeft="@dimen/margin_left"
                            android:layout_marginRight="5dp"
                            android:gravity="right"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.7"
                            android:text="@string/radius" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/confirmFilterPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/margin_right"
            android:background="@drawable/my_rounded_button"
            android:text="@string/ok"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow"
        android:background="@drawable/shadow_toolbar" />

</LinearLayout>